removal of seqNum from Queueable interface